@@ -34,7 +34,7 @@ add_definitions(-Wall)
 
 # vvv
 #add_definitions(-Wpedantic) # full ISO spec
-add_definitions(-Werror) # warnings as errors
+#add_definitions(-Werror) # warnings as errors
 add_definitions(-Wfatal-errors) # stop on first
 add_definitions(-Werror=format-security)
 add_definitions(-Wextra)
