@@ -1,5 +1,9 @@
 yoshimi 2.0.2
 
+2021-6-21 Will
+* BugFix: GUI scale kemap label not resizing.
+* Completed Scales in guide.
+
 2021-6-20 Will
 * Small improvement to vector and midi learn in guide.
 * Completed Resonance in guide.
